		CHANGES IN APE VERSION 5.8-2


NEW FEATURES

    o read.nexus() now translates (fully) between tokens and labels
      (including nodes') so that this feature conforms to the NEXUS
      standard (see issue #133 on GitHub).

    o collapse.singles() is now generic with methods for the classes
      "phylo" and "multiPhylo".

    o A new vignette by Thomas Guillerme describes the basics of the
      "phylo" structure.


BUG FIXES

    o print.DNAbin() did not work well with a single vector (a quite
      rare situation in practice).

    o plot.phylo() now avoids plotting badly conformed trees that
      could lead to a crash (issue #133 on GitHub).

    o read.tree() failed when the Newick string lacked matching outer
      parentheses (issue #142 on GitHub).


OTHER CHANGES

    o 'knitr' has been added as a suggested package.



      		CHANGES IN APE VERSION 5.8-1


NEW FEATURES

    o write.nexus() has a new option, digitis = 10, similar to the one
      with the same name in write.tree(). The help page of the latter
      has been clarified (see PR #130 on GitHub).

    o kronoviz() has two new options, 'direction' and 'side', to add
      more flexibbility to the plot.


BUG FIXES

    o plot.phylo() shifted the coordinates when the tree was plotted
      left- or downwards (see PR #119 on GitHub).

    o Newick strings with a single tip and multiple nodes were not
      correctly parsed. Also, if a root edge was present it was not
      correctly decoded (see issue #124 on GitHub).

    o dist.nodes() returned a (meaningless) result for trees with no
      branch lengths (sometimes a segfault occurred). This function
      has now the option 'fail.if.no.length = FALSE' so that branch
      lengths, if absent in the tree, are fixed to one (with a
      warning). An error is returned if this option is set to FALSE.


OTHER CHANGES

    o Plotting circular trees has been improved (see PR #129 on GitHub).
