@@ -44,7 +44,7 @@ export(.compressTipLabel, .PlotPhyloEnv, .uncompressTipLabel,
        is.ultrametric.phylo, keep.tip, keep.tip.multiPhylo,
        keep.tip.phylo, kronoviz, label2table, labels.DNAbin,
        ladderize, LargeNumber, latag2n, letterconf, lmorigin, LTT,
-       ltt.coplot, ltt.lines, ltt.plot, ltt.plot.coords,
+       ltt.coplot, ltt.lines, ltt.plot, ltt.plot.coords, mafft,
        makeChronosCalib, makeLabel, makeLabel.character,
        makeNodeLabel, mantel.test, matexpo, mcconwaysims.test,
        mcmc.popsize, mixedFontLabel, mltt.plot, Moran.I, MPR, mrca,
